<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.android.justjava.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_marginBottom="16dp"
        android:text="@string/QuantityHeader" />

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/PlusButton"
        android:layout_marginBottom="16dp"
        android:onClick="increment" />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/QuantityValue"
        android:textSize="16sp"
        android:textColor="@android:color/black" />

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/MinusButton"
        android:layout_marginTop="16dp"
        android:onClick="decrement" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/PriceHeader" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PriceValue"
        android:textSize="16sp"
        android:textColor="@android:color/black" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OrderButtonName"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder" />

</LinearLayout>
